--- a/Interview Questions/LeetCodePython.ipynb
+++ b/Interview Questions/LeetCodePython.ipynb
@@ -6,7 +6,7 @@
       "name": "LeetCodePython.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM7EjiITT2cqfkODZLeTQvi",
+      "authorship_tag": "ABX9TyNR8uU7NCFLR+QGgwOHCG/T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,7 +113,7 @@
         "    Greatest_candies.append(False)\r\n",
         "print(Greatest_candies)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
         "  nums_shuffle.extend([nums[i],nums[n+i]]) # Use extend to append 2 numbers\r\n",
         "print(nums_shuffle)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,7 +180,7 @@
         "      good_pairs += 1\r\n",
         "print(good_pairs)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +214,7 @@
         "  nums_smaller.append(count)\r\n",
         "print(nums_smaller)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,7 +247,7 @@
         "    nums_Decompress.append(nums[i+1])\r\n",
         "print(nums_Decompress)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,7 +282,7 @@
         "   nums_Target.insert(index[i],nums[i])\r\n",
         "print(nums_Target)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,7 +320,7 @@
         "print(xorOperation(1, 7))\r\n",
         "print(xorOperation(10, 5))"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,7 +355,7 @@
         "    arr_oddLenSum += sum(arr[i:j])\r\n",
         "print(arr_oddLenSum)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,7 +387,7 @@
         "print(Altitude_gain)\r\n",
         "print(max(Altitude_gain))"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,7 +428,7 @@
         "        good_triplets.append([arr[i],arr[j],arr[k]])\r\n",
         "print(len(good_triplets))"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,7 +494,7 @@
         "    even_digits +=1\r\n",
         "print(even_digits)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -531,7 +531,7 @@
         "    Matrix_oddValues[row][indices[i][1]] +=1\r\n",
         "print(Matrix_oddValues)"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -546,10 +546,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "dZ9peXr5H3hd",
-        "outputId": "a2203769-a59e-4a86-9ca5-feb8ece30b1a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a2203769-a59e-4a86-9ca5-feb8ece30b1a"
       },
       "source": [
         "# 1572. Matrix Diagonal Sum\r\n",
@@ -565,7 +565,7 @@
         "    Diagonal_sum += mat[i][j]\r\n",
         "print(Diagonal_sum)"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -580,10 +580,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "EEhGYVc6Lf3X",
-        "outputId": "ca38e6c7-ef94-4ae0-efc5-3b6d6b2784fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ca38e6c7-ef94-4ae0-efc5-3b6d6b2784fd"
       },
       "source": [
         "# 1086. High Five\r\n",
@@ -612,7 +612,7 @@
         "Output_Avg.sort()\r\n",
         "print(Output_Avg)"
       ],
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -630,10 +630,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Lv6fF0pGjHDk",
-        "outputId": "199ba65a-7397-48ce-d643-a92d7b9aa7fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "199ba65a-7397-48ce-d643-a92d7b9aa7fa"
       },
       "source": [
         "# 832. Flipping an Image\r\n",
@@ -653,7 +653,7 @@
         "      Input[i][l]=0\r\n",
         "print(Input)"
       ],
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -668,10 +668,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "j-7tH9xksWR1",
-        "outputId": "794de0df-567e-4c05-d148-771d94520795",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "794de0df-567e-4c05-d148-771d94520795"
       },
       "source": [
         "# 1748. Sum of Unique Elements\r\n",
@@ -689,7 +689,7 @@
         "      uq_nums.append(nums[i])\r\n",
         "print(sum(uq_nums))"
       ],
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -738,10 +738,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "TIVpasEw1JEX",
-        "outputId": "ef8d703d-8792-45aa-e525-a5d91fa76043",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ef8d703d-8792-45aa-e525-a5d91fa76043"
       },
       "source": [
         "# 1464. Maximum Product of Two Elements in an Array\r\n",
@@ -755,7 +755,7 @@
         "      max_ij = (nums[i]-1)*(nums[j]-1)\r\n",
         "print(max_ij)"
       ],
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,10 +770,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "f2NvnOz37x0o",
-        "outputId": "9c5fd730-926c-4084-ef8a-04518b28f887",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9c5fd730-926c-4084-ef8a-04518b28f887"
       },
       "source": [
         "# 1304. Find N Unique Integers Sum up to Zero\r\n",
@@ -787,7 +787,7 @@
         "  Uq_Ints.append(0)\r\n",
         "print(Uq_Ints)"
       ],
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -833,10 +833,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "IAkfILjv-4cH",
-        "outputId": "f1eebd92-3228-4a41-c37e-8595728d9679",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f1eebd92-3228-4a41-c37e-8595728d9679"
       },
       "source": [
         "# 1085. Sum of Digits in the Minimum Number\r\n",
@@ -856,7 +856,7 @@
         "  min_sum_odd_even=0\r\n",
         "print(min_sum_odd_even)"
       ],
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -914,10 +914,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "07TreFXOAYJ4",
-        "outputId": "7620d934-2c65-405b-83e0-00aa7b874cd0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7620d934-2c65-405b-83e0-00aa7b874cd0"
       },
       "source": [
         "# 905. Sort Array By Parity\r\n",
@@ -935,7 +935,7 @@
         "list_even.extend(list_odd)\r\n",
         "print(list_even)"
       ],
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -949,13 +949,112 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Zc4WK_-tDDkA"
+        "id": "Zc4WK_-tDDkA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9bc79b81-e6ea-4ad7-a07f-054d14c47d2e"
       },
       "source": [
-        "1742. Maximum Number of Balls in a Box\r\n"
+        "# 1742. Maximum Number of Balls in a Box\r\n",
+        "# You are working in a ball factory where you have n balls numbered from lowLimit up to highLimit inclusive (i.e., n == highLimit - lowLimit + 1), and an infinite number of boxes numbered from 1 to infinity.\r\n",
+        "# Your job at this factory is to put each ball in the box with a number equal to the sum of digits of the ball's number. For example, the ball number 321 will be put in the box number 3 + 2 + 1 = 6 and the ball number 10 will be put in the box number 1 + 0 = 1.\r\n",
+        "# Given two integers lowLimit and highLimit, return the number of balls in the box with the most balls.\r\n",
+        "lowLimit = 5 #1\r\n",
+        "highLimit = 36 # 10\r\n",
+        "# Output: 4 #2\r\n",
+        "Bag = []\r\n",
+        "for i in range(lowLimit,highLimit+1,1):\r\n",
+        "  Sum_digits = 0\r\n",
+        "  num = i\r\n",
+        "  while num>0:\r\n",
+        "    Sum_digits += num%10\r\n",
+        "    num = num//10\r\n",
+        "  Bag.append(Sum_digits)\r\n",
+        "print(Bag)\r\n",
+        "Max_Bag = 0\r\n",
+        "for i in list(set(Bag)):\r\n",
+        "  if i in Bag[Bag.index(i)+1:] and Bag.count(i)>Max_Bag:\r\n",
+        "    Max_Bag=Bag.count(i)\r\n",
+        "print(Max_Bag)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 3, 4, 5, 6, 7, 8, 9]\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G5JepSg_7Lj1",
+        "outputId": "35d8586a-3250-4ea9-95eb-76d1b4e53d99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 1299. Replace Elements with Greatest Element on Right Side\r\n",
+        "# Given an array arr, replace every element in that array with the greatest element among the elements to its right, and replace the last element with -1.\r\n",
+        "arr = [17,18,5,4,6,1]\r\n",
+        "# Output: [18,6,6,6,1,-1]\r\n",
+        "Max_arr = []\r\n",
+        "for i in range(len(arr)):\r\n",
+        "  if i==len(arr)-1:\r\n",
+        "    Max_arr.append(-1)\r\n",
+        "  else:\r\n",
+        "    Max_arr.append(max(arr[i+1:]))\r\n",
+        "print(Max_arr)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[18, 6, 6, 6, 1, -1]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GMW9X_EU7vaW",
+        "outputId": "9863bb69-b022-4484-8226-f62208c0f278",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 561. Array Partition I\r\n",
+        "# Given an integer array nums of 2n integers, group these integers into n pairs (a1, b1), (a2, b2), ..., (an, bn) such that the sum of min(ai, bi) for all i is maximized. Return the maximized sum.\r\n",
+        "nums = [6,2,6,5,1,2] #[1,4,3,2]\r\n",
+        "# Output: 9 #4\r\n",
+        "# arr length is 2n,pairs=n. To get max sum of min(a,b) of n pairs, sort array and choose the adjacent items as pairs, sum of numbers at even indices gives Max sum\r\n",
+        "nums.sort()\r\n",
+        "Max_sum = 0\r\n",
+        "for i in range(len(nums)):\r\n",
+        "  if i%2==0:\r\n",
+        "    Max_sum += nums[i]\r\n",
+        "print(Max_sum)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "9\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -999,7 +1098,7 @@
         "          if target==nums[i]+nums[j]:\r\n",
         "            print(i,j)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
