--- a/Interview Questions/LeetCodePython.ipynb
+++ b/Interview Questions/LeetCodePython.ipynb
@@ -6,7 +6,7 @@
       "name": "LeetCodePython.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNR8uU7NCFLR+QGgwOHCG/T",
+      "authorship_tag": "ABX9TyMfc79FjKxQ3tTR5qgqXY6P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -993,11 +993,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G5JepSg_7Lj1",
-        "outputId": "35d8586a-3250-4ea9-95eb-76d1b4e53d99",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "G5JepSg_7Lj1",
+        "outputId": "35d8586a-3250-4ea9-95eb-76d1b4e53d99"
       },
       "source": [
         "# 1299. Replace Elements with Greatest Element on Right Side\r\n",
@@ -1026,11 +1026,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GMW9X_EU7vaW",
-        "outputId": "9863bb69-b022-4484-8226-f62208c0f278",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GMW9X_EU7vaW",
+        "outputId": "9863bb69-b022-4484-8226-f62208c0f278"
       },
       "source": [
         "# 561. Array Partition I\r\n",
@@ -1059,10 +1059,384 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "XAiA3v2n8sXh",
+        "outputId": "9f4cfb99-310c-4d66-9546-24c15a7f7284",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 1460. Make Two Arrays Equal by Reversing Sub-arrays\r\n",
+        "# Given two integer arrays of equal length target and arr.\r\n",
+        "# In one step, you can select any non-empty sub-array of arr and reverse it. You are allowed to make any number of steps.\r\n",
+        "# Return True if you can make arr equal to target, or False otherwise.\r\n",
+        "target = [1,2,3,4]\r\n",
+        "arr = [2,4,1,3]\r\n",
+        "# Output: true\r\n",
+        "# Target and arr should have same numbers and their freq should also be same\r\n",
+        "from collections import Counter\r\n",
+        "if Counter(target)==Counter(arr):\r\n",
+        "  print(True)\r\n",
+        "else:\r\n",
+        "  print(False)"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-Jx1pb8k94gT",
+        "outputId": "05bba686-2a72-4a62-e20f-73f639dd9def",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 977. Squares of a Sorted Array\r\n",
+        "# Given an integer array nums sorted in non-decreasing order, return an array of the squares of each number sorted in non-decreasing order.\r\n",
+        "nums = [-4,-1,0,3,10]\r\n",
+        "# Output: [0,1,9,16,100]\r\n",
+        "nums.sort(key=abs) # Sort numbers by absolute value\r\n",
+        "[x**2 for x in nums]"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 1, 9, 16, 100]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vv6uW8B8FKip",
+        "outputId": "512f1cb9-3b40-4092-e953-85dddeaaf423",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 1051. Height Checker\r\n",
+        "# Students are asked to stand in non-decreasing order of heights for an annual photo.\r\n",
+        "# Return the minimum number of students that must move in order for all students to be standing in non-decreasing order of height.\r\n",
+        "# Notice that when a group of students is selected they can reorder in any possible way between themselves and the non selected students remain on their seats.\r\n",
+        "heights = [1,2,3,4,5] #[5,1,2,3,4] #[1,1,4,2,1,3]\r\n",
+        "# Output:  0 #5 #3\r\n",
+        "# Sort heights and compared sorted order with original and see how many of them are not in same positions\r\n",
+        "heights_sorted = sorted(heights)\r\n",
+        "positions = 0\r\n",
+        "for i,j in zip(heights,heights_sorted):\r\n",
+        "  if i!=j:\r\n",
+        "    positions +=1\r\n",
+        "print(positions)"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sC6N5K5IJlzg",
+        "outputId": "b9c0aad9-7e93-4de4-88c6-8507fe4b14ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check for multiple ifelse conditions, if one of the condition is false return False, otherwise return True\r\n",
+        "# 1502. Can Make Arithmetic Progression From Sequence\r\n",
+        "# Given an array of numbers arr. A sequence of numbers is called an arithmetic progression if the difference between any two consecutive elements is the same.\r\n",
+        "# Return true if the array can be rearranged to form an arithmetic progression, otherwise, return false.\r\n",
+        "arr = [3,5,1,7,9]\r\n",
+        "# Output: true\r\n",
+        "# sort the arr and compare difference of i+1 & i\r\n",
+        "arr.sort()\r\n",
+        "Diff = arr[1]-arr[0]\r\n",
+        "output = True\r\n",
+        "for i in range(1,len(arr)-1):\r\n",
+        "  if arr[i+1]-arr[i]==Diff: # CHecks all combinations\r\n",
+        "    output = True \r\n",
+        "  else:\r\n",
+        "    output = False\r\n",
+        "    break # if condition doesn't satisfy return False and break\r\n",
+        "print(output)"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tB4oGCXcsOx4",
+        "outputId": "e13982bf-5297-4de3-b62c-6667488dee61",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 1380. Lucky Numbers in a Matrix\r\n",
+        "# Given a m * n matrix of distinct numbers, return all lucky numbers in the matrix in any order.\r\n",
+        "# A lucky number is an element of the matrix such that it is the minimum element in its row and maximum in its column.\r\n",
+        "matrix = [[1,10,4,2],[9,3,8,7],[15,16,17,12]] # [[3,7,8],[9,11,13],[15,16,17]] # items in a row can be accessed\r\n",
+        "# Output: [12] # [15]\r\n",
+        "# To access items in a column inverse the matrix - use zip\r\n",
+        "matrix_inv = list(zip(*matrix)) #inverse of a matrix\r\n",
+        "m = len(matrix)\r\n",
+        "n = len(matrix[0])\r\n",
+        "Lucky_nums = []\r\n",
+        "for i in range(m):\r\n",
+        "  for j in range(n):\r\n",
+        "    if matrix[i][j]==min(matrix[i]) and matrix[i][j]==max(matrix_inv[j]):\r\n",
+        "      Lucky_nums.append(matrix[i][j])\r\n",
+        "print(Lucky_nums)"
+      ],
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[12]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jq3MK3UixkXS",
+        "outputId": "14310ae3-483a-4286-e3f0-b5210d50175e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 922. Sort Array By Parity II\r\n",
+        "# Given an array A of non-negative integers, half of the integers in A are odd, and half of the integers are even.\r\n",
+        "# Sort the array so that whenever A[i] is odd, i is odd; and whenever A[i] is even, i is even.\r\n",
+        "# You may return any answer array that satisfies this condition.\r\n",
+        "Input = [4,2,5,7]\r\n",
+        "# Output: [4,5,2,7]\r\n",
+        "Even = []\r\n",
+        "Odd = []\r\n",
+        "for i in Input:\r\n",
+        "  if i%2==0:\r\n",
+        "    Even.append(i)\r\n",
+        "  else:\r\n",
+        "    Odd.append(i)\r\n",
+        "print(Even)\r\n",
+        "print(Odd)\r\n",
+        "Output = []\r\n",
+        "for i,j in zip(Even,Odd):\r\n",
+        "  Output.extend([i,j])\r\n",
+        "print(Output)"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[4, 2]\n",
+            "[5, 7]\n",
+            "[4, 5, 2, 7]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y7raE-SZADT4",
+        "outputId": "d2d7a74b-a7a9-4b50-8d95-eae195f27cd7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 1337. The K Weakest Rows in a Matrix\r\n",
+        "# Given a m * n matrix mat of ones (representing soldiers) and zeros (representing civilians), return the indexes of the k weakest rows in the matrix ordered from the weakest to the strongest.\r\n",
+        "# A row i is weaker than row j, if the number of soldiers in row i is less than the number of soldiers in row j, or they have the same number of soldiers but i is less than j. \r\n",
+        "# Soldiers are always stand in the frontier of a row, that is, always ones may appear first and then zeros.\r\n",
+        "mat = [[1,1,0,0,0],\r\n",
+        " [1,1,1,1,0],\r\n",
+        " [1,0,0,0,0],\r\n",
+        " [1,1,0,0,0],\r\n",
+        " [1,1,1,1,1]]\r\n",
+        "k = 3\r\n",
+        "# Output: [2,0,3]\r\n",
+        "Soldiers = []\r\n",
+        "for i in range(len(mat)):\r\n",
+        "  Soldiers.append([sum(mat[i]),i])\r\n",
+        "Soldiers.sort()\r\n",
+        "print(Soldiers)\r\n",
+        "list(list(zip(*Soldiers))[1][:k])"
+      ],
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1, 2], [2, 0], [2, 3], [4, 1], [5, 4]]\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[2, 0, 3]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lUjK79S-FKET",
+        "outputId": "bea19875-9adf-43b2-b6ff-c885499f6b42",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 1491. Average Salary Excluding the Minimum and Maximum Salary\r\n",
+        "# Given an array of unique integers salary where salary[i] is the salary of the employee i.\r\n",
+        "# Return the average salary of employees excluding the minimum and maximum salary.\r\n",
+        "salary = [8000,9000,2000,3000,6000,1000] #[4000,3000,1000,2000]\r\n",
+        "# Output: 4750 #2500.00000\r\n",
+        "salary.remove(min(salary))\r\n",
+        "salary.remove(max(salary))\r\n",
+        "print(sum(salary)/len(salary))"
+      ],
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4750.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pQyMIhF8F8jl",
+        "outputId": "da0f76c5-27c8-44c9-9550-94243ccaa3df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 1002. Find Common Characters\r\n",
+        "# Given an array A of strings made only from lowercase letters, return a list of all characters that show up in all strings within the list (including duplicates).  \r\n",
+        "# For example, if a character occurs 3 times in all strings but not 4 times, you need to include that character three times in the final answer.\r\n",
+        "# You may return the answer in any order.\r\n",
+        "Input=[\"bella\",\"label\",\"rollerl\"]\r\n",
+        "# Output: [\"e\",\"l\",\"l\"]\r\n",
+        "Input_counter = []\r\n",
+        "for i in Input:\r\n",
+        "  Input_counter.append(Counter(i))\r\n",
+        "print(Input_counter)\r\n",
+        "for i in Input_counter:\r\n",
+        "  for j \r\n"
+      ],
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[Counter({'l': 2, 'b': 1, 'e': 1, 'a': 1}), Counter({'l': 2, 'a': 1, 'b': 1, 'e': 1}), Counter({'l': 3, 'r': 2, 'o': 1, 'e': 1})]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N5LU8T5kEeJb"
+      },
+      "source": [
+        "# 1700. Number of Students Unable to Eat Lunch\r\n",
+        "# The school cafeteria offers circular and square sandwiches at lunch break, referred to by numbers 0 and 1 respectively. All students stand in a queue. Each student either prefers square or circular sandwiches.\r\n",
+        "# The number of sandwiches in the cafeteria is equal to the number of students. The sandwiches are placed in a stack. At each step:\r\n",
+        "# If the student at the front of the queue prefers the sandwich on the top of the stack, they will take it and leave the queue.\r\n",
+        "# Otherwise, they will leave it and go to the queue's end.\r\n",
+        "# This continues until none of the queue students want to take the top sandwich and are thus unable to eat.\r\n",
+        "# You are given two integer arrays students and sandwiches where sandwiches[i] is the type of the i​​​​​​th sandwich in the stack (i = 0 is the top of the stack) and \r\n",
+        "# students[j] is the preference of the j​​​​​​th student in the initial queue (j = 0 is the front of the queue). Return the number of students that are unable to eat.\r\n",
+        "students = [1,1,1,0,0,1]\r\n",
+        "sandwiches = [1,0,0,0,1,1]\r\n",
+        "# Output: 3\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gWHy9eCPI8wG"
+      },
+      "source": [
+        "# 1217. Minimum Cost to Move Chips to The Same Position\r\n",
+        "# We have n chips, where the position of the ith chip is position[i].\r\n",
+        "# We need to move all the chips to the same position. In one step, we can change the position of the ith chip from position[i] to:\r\n",
+        "# position[i] + 2 or position[i] - 2 with cost = 0.\r\n",
+        "# position[i] + 1 or position[i] - 1 with cost = 1.\r\n",
+        "# Return the minimum cost needed to move all the chips to the same position.\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "yuiKYI-Ssarl"
       },
       "source": [
-        ")# 1656. Design an Ordered Stream\r\n",
+        "# 1656. Design an Ordered Stream\r\n",
         "# There is a stream of n (id, value) pairs arriving in an arbitrary order, where id is an integer between 1 and n and value is a string. No two pairs have the same id.\r\n",
         "# Design a stream that returns the values in increasing order of their IDs by returning a chunk (list) of values after each insertion. The concatenation of all the chunks should result in a list of the sorted values.\r\n",
         "# Implement the OrderedStream class:\r\n",
