--- a/Interview Questions/LeetCodePython.ipynb
+++ b/Interview Questions/LeetCodePython.ipynb
@@ -6,7 +6,7 @@
       "name": "LeetCodePython.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMfc79FjKxQ3tTR5qgqXY6P",
+      "authorship_tag": "ABX9TyNogU78Bm6OXGWopPXOQwBI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -978,7 +978,7 @@
         "    Max_Bag=Bag.count(i)\r\n",
         "print(Max_Bag)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1012,7 +1012,7 @@
         "    Max_arr.append(max(arr[i+1:]))\r\n",
         "print(Max_arr)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1045,7 +1045,7 @@
         "    Max_sum += nums[i]\r\n",
         "print(Max_sum)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1060,10 +1060,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "XAiA3v2n8sXh",
-        "outputId": "9f4cfb99-310c-4d66-9546-24c15a7f7284",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9f4cfb99-310c-4d66-9546-24c15a7f7284"
       },
       "source": [
         "# 1460. Make Two Arrays Equal by Reversing Sub-arrays\r\n",
@@ -1080,7 +1080,7 @@
         "else:\r\n",
         "  print(False)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1095,10 +1095,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "-Jx1pb8k94gT",
-        "outputId": "05bba686-2a72-4a62-e20f-73f639dd9def",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "05bba686-2a72-4a62-e20f-73f639dd9def"
       },
       "source": [
         "# 977. Squares of a Sorted Array\r\n",
@@ -1108,7 +1108,7 @@
         "nums.sort(key=abs) # Sort numbers by absolute value\r\n",
         "[x**2 for x in nums]"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1128,10 +1128,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "vv6uW8B8FKip",
-        "outputId": "512f1cb9-3b40-4092-e953-85dddeaaf423",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "512f1cb9-3b40-4092-e953-85dddeaaf423"
       },
       "source": [
         "# 1051. Height Checker\r\n",
@@ -1148,7 +1148,7 @@
         "    positions +=1\r\n",
         "print(positions)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1163,10 +1163,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "sC6N5K5IJlzg",
-        "outputId": "b9c0aad9-7e93-4de4-88c6-8507fe4b14ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b9c0aad9-7e93-4de4-88c6-8507fe4b14ac"
       },
       "source": [
         "# Check for multiple ifelse conditions, if one of the condition is false return False, otherwise return True\r\n",
@@ -1187,7 +1187,7 @@
         "    break # if condition doesn't satisfy return False and break\r\n",
         "print(output)"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1202,10 +1202,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "tB4oGCXcsOx4",
-        "outputId": "e13982bf-5297-4de3-b62c-6667488dee61",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e13982bf-5297-4de3-b62c-6667488dee61"
       },
       "source": [
         "# 1380. Lucky Numbers in a Matrix\r\n",
@@ -1224,7 +1224,7 @@
         "      Lucky_nums.append(matrix[i][j])\r\n",
         "print(Lucky_nums)"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1239,10 +1239,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "jq3MK3UixkXS",
-        "outputId": "14310ae3-483a-4286-e3f0-b5210d50175e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "14310ae3-483a-4286-e3f0-b5210d50175e"
       },
       "source": [
         "# 922. Sort Array By Parity II\r\n",
@@ -1265,7 +1265,7 @@
         "  Output.extend([i,j])\r\n",
         "print(Output)"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1282,10 +1282,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "y7raE-SZADT4",
-        "outputId": "d2d7a74b-a7a9-4b50-8d95-eae195f27cd7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d2d7a74b-a7a9-4b50-8d95-eae195f27cd7"
       },
       "source": [
         "# 1337. The K Weakest Rows in a Matrix\r\n",
@@ -1306,7 +1306,7 @@
         "print(Soldiers)\r\n",
         "list(list(zip(*Soldiers))[1][:k])"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1333,10 +1333,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "lUjK79S-FKET",
-        "outputId": "bea19875-9adf-43b2-b6ff-c885499f6b42",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bea19875-9adf-43b2-b6ff-c885499f6b42"
       },
       "source": [
         "# 1491. Average Salary Excluding the Minimum and Maximum Salary\r\n",
@@ -1348,7 +1348,7 @@
         "salary.remove(max(salary))\r\n",
         "print(sum(salary)/len(salary))"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1362,13 +1362,96 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pQyMIhF8F8jl",
-        "outputId": "da0f76c5-27c8-44c9-9550-94243ccaa3df",
+        "id": "a-36EPbjsRK9"
+      },
+      "source": [
+        "# 1. Two Sum\r\n",
+        "# Given an array of integers nums and an integer target, return indices of the two numbers such that they add up to target.\r\n",
+        "# You may assume that each input would have exactly one solution, and you may not use the same element twice.\r\n",
+        "nums=[2,7,11,15]\r\n",
+        "target = 9\r\n",
+        "\r\n",
+        "class Solution:\r\n",
+        "    for i in range(len(nums)-1):\r\n",
+        "        for j in range(i+1,len(nums)):\r\n",
+        "          if target==nums[i]+nums[j]:\r\n",
+        "            print(i,j)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XICz5BoHt0G2",
+        "outputId": "f6f7fdc4-d9b4-40cb-9c1d-a59de228364b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
+        "# Merge two sorted arrays\r\n",
+        "Arr1 = [1, 3, 4, 6,11]\r\n",
+        "Arr2 = [2, 5, 7, 10]\r\n",
+        "# Output: [1, 2, 3, 4, 5, 6, 7, 10]\r\n",
+        "i=0\r\n",
+        "j=0\r\n",
+        "Sorted_Arr = []\r\n",
+        "while i<len(Arr1) and j<len(Arr2):\r\n",
+        "  if Arr1[i] < Arr2[j]:\r\n",
+        "    Sorted_Arr.append(Arr1[i])\r\n",
+        "    i +=1  \r\n",
+        "  else:\r\n",
+        "    Sorted_Arr.append(Arr2[j])\r\n",
+        "    j += 1\r\n",
+        "print(i,j)\r\n",
+        "print(Sorted_Arr)\r\n",
+        "if i == len(Arr1) and j <len(Arr2): # when Arr1 loop is complete abnd not Arr2\r\n",
+        "  Sorted_Arr.extend(Arr2[j:])\r\n",
+        "if j == len(Arr2) and i <len(Arr1): # when Arr2 loop is complete and not Arr1\r\n",
+        "  Sorted_Arr.extend(Arr1[i:])\r\n",
+        "print(Sorted_Arr)"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4 4\n",
+            "[1, 2, 3, 4, 5, 6, 7, 10]\n",
+            "[1, 2, 3, 4, 5, 6, 7, 10, 11]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2UC864S119rQ"
+      },
+      "source": [
+        "# 4. Median of Two Sorted Arrays\r\n",
+        "# Given two sorted arrays nums1 and nums2 of size m and n respectively, return the median of the two sorted arrays.\r\n",
+        "# Follow up: The overall run time complexity should be O(log (m+n))\r\n",
+        "nums1 = [1,3], nums2 = [2]\r\n",
+        "# Output: 2.00000\r\n",
+        "\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pQyMIhF8F8jl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d3f45f75-e1ae-4f89-9c09-b5e66182490e"
+      },
+      "source": [
+        "# Pending\r\n",
         "# 1002. Find Common Characters\r\n",
         "# Given an array A of strings made only from lowercase letters, return a list of all characters that show up in all strings within the list (including duplicates).  \r\n",
         "# For example, if a character occurs 3 times in all strings but not 4 times, you need to include that character three times in the final answer.\r\n",
@@ -1379,15 +1462,29 @@
         "for i in Input:\r\n",
         "  Input_counter.append(Counter(i))\r\n",
         "print(Input_counter)\r\n",
+        "Intersection = []\r\n",
         "for i in Input_counter:\r\n",
-        "  for j \r\n"
+        "  for j in i.items():\r\n",
+        "    print(j)\r\n"
       ],
-      "execution_count": 94,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[Counter({'l': 2, 'b': 1, 'e': 1, 'a': 1}), Counter({'l': 2, 'a': 1, 'b': 1, 'e': 1}), Counter({'l': 3, 'r': 2, 'o': 1, 'e': 1})]\n"
+            "[Counter({'l': 2, 'b': 1, 'e': 1, 'a': 1}), Counter({'l': 2, 'a': 1, 'b': 1, 'e': 1}), Counter({'l': 3, 'r': 2, 'o': 1, 'e': 1})]\n",
+            "('b', 1)\n",
+            "('e', 1)\n",
+            "('l', 2)\n",
+            "('a', 1)\n",
+            "('l', 2)\n",
+            "('a', 1)\n",
+            "('b', 1)\n",
+            "('e', 1)\n",
+            "('r', 2)\n",
+            "('o', 1)\n",
+            "('l', 3)\n",
+            "('e', 1)\n"
           ],
           "name": "stdout"
         }
@@ -1462,15 +1559,7 @@
         "outputId": "271b1b13-707d-472f-d2ab-c6e80b4d8882"
       },
       "source": [
-        "# Given an array of integers nums and an integer target, return indices of the two numbers such that they add up to target.\r\n",
-        "nums=[2,7,11,15]\r\n",
-        "target = 9\r\n",
-        "\r\n",
-        "class Solution:\r\n",
-        "    for i in range(len(nums)-1):\r\n",
-        "        for j in range(i+1,len(nums)):\r\n",
-        "          if target==nums[i]+nums[j]:\r\n",
-        "            print(i,j)"
+        ""
       ],
       "execution_count": null,
       "outputs": [
