--- a/Interview Questions/LeetCodePython.ipynb
+++ b/Interview Questions/LeetCodePython.ipynb
@@ -6,7 +6,7 @@
       "name": "LeetCodePython.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNogU78Bm6OXGWopPXOQwBI",
+      "authorship_tag": "ABX9TyMBo9m2wYhBp1ZGdsyYJj1i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1383,11 +1383,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XICz5BoHt0G2",
-        "outputId": "f6f7fdc4-d9b4-40cb-9c1d-a59de228364b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XICz5BoHt0G2",
+        "outputId": "f6f7fdc4-d9b4-40cb-9c1d-a59de228364b"
       },
       "source": [
         "# Merge two sorted arrays\r\n",
@@ -1428,18 +1428,136 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2UC864S119rQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2UC864S119rQ",
+        "outputId": "697badb7-584d-4231-cf1a-2f94da306ed1"
       },
       "source": [
-        "# 4. Median of Two Sorted Arrays\r\n",
+        "# 4. Median of Two Sorted Arrays - \r\n",
         "# Given two sorted arrays nums1 and nums2 of size m and n respectively, return the median of the two sorted arrays.\r\n",
         "# Follow up: The overall run time complexity should be O(log (m+n))\r\n",
-        "nums1 = [1,3], nums2 = [2]\r\n",
-        "# Output: 2.00000\r\n",
+        "\r\n",
+        "# Use the sorted array generated above\r\n",
+        "if len(Sorted_Arr)%2!=0:\r\n",
+        "  print(Sorted_Arr[len(Sorted_Arr)//2])\r\n",
+        "else:\r\n",
+        "  print((Sorted_Arr[(len(Sorted_Arr)/2)-1]+Sorted_Arr[len(Sorted_Arr)/2])/2)"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BlP6i0LBrYnq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "95c41e31-89a3-4f21-e98d-c79e5ffa1f8f"
+      },
+      "source": [
+        "11. Container With Most Water\r\n",
+        "height = [1,8,6,2,5,4,8,3,7]\r\n",
+        "max = 0\r\n",
+        "for i in range(len(height)-1):\r\n",
+        "  for j in range(1,len(height)):\r\n",
+        "    if min(height[i],height[j])*(j-i)>max:\r\n",
+        "      max = min(height[i],height[j])*(j-i)\r\n",
+        "print(max)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "49\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ABIVa0GnQD7t",
+        "outputId": "857e90a5-3ed9-47ae-df95-661d98183a7c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 15. 3Sum\r\n",
+        "# Given an array nums of n integers, are there elements a, b, c in nums such that a + b + c = 0? Find all unique triplets in the array which gives the sum of zero.\r\n",
+        "# Notice that the solution set must not contain duplicate triplets.\r\n",
+        "\r\n",
+        "# there are duplicates in this \r\n",
+        "# nums = [-1,0,1,2,-1,-4]\r\n",
+        "# for i in range(len(nums)-2):\r\n",
+        "#     for j in range(i+1,len(nums)-1):\r\n",
+        "#         for k in range(j+1,len(nums)):\r\n",
+        "#             if nums[i]+nums[j]+nums[k]==0:\r\n",
+        "#                 print(nums[i],nums[j],nums[k])\r\n",
+        "\r\n",
+        "# Use set function to remove duplicates i.e to check if [1,0,-1] is same as [-1,0,1]\r\n",
+        "nums = [-1,0,1,2,-1,-4]\r\n",
+        "new_nums = []\r\n",
+        "for i in range(len(nums)-2):\r\n",
+        "    for j in range(i+1,len(nums)-1):\r\n",
+        "        for k in range(j+1,len(nums)):\r\n",
+        "            if nums[i]+nums[j]+nums[k]==0 and set([nums[i],nums[j],nums[k]]) not in new_nums:\r\n",
+        "                new_nums.append(set([nums[i],nums[j],nums[k]]))\r\n",
+        "print(new_nums)\r\n",
+        "print(len(new_nums))"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[{0, 1, -1}, {2, -1}]\n",
+            "2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mc-VIv1kae9G",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b201c32f-2682-4703-d6e9-a36b84bcba23"
+      },
+      "source": [
+        "# 16. 3Sum Closest\r\n",
+        "# Given an array nums of n integers and an integer target, find three integers in nums such that the sum is closest to target. Return the sum of the three integers. You may assume that each input would have exactly one solution.\r\n",
+        "nums = [-1,2,1,-4]\r\n",
+        "target = 1\r\n",
+        "# Output: 2\r\n",
         "\r\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1997,97 +2115,6 @@
           "output_type": "stream",
           "text": [
             "[[1, 0, 0], [0, 1, 0], [1, 1, 1]]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BlP6i0LBrYnq",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "95c41e31-89a3-4f21-e98d-c79e5ffa1f8f"
-      },
-      "source": [
-        "height = [1,8,6,2,5,4,8,3,7]\r\n",
-        "max = 0\r\n",
-        "for i in range(len(height)-1):\r\n",
-        "  for j in range(1,len(height)):\r\n",
-        "    if min(height[i],height[j])*(j-i)>max:\r\n",
-        "      max = min(height[i],height[j])*(j-i)\r\n",
-        "print(max)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "49\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "AQ4ZRfrhgsHI",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5f207912-e2b6-41cd-b033-014f47a8b322"
-      },
-      "source": [
-        "# there are duplicates in this \r\n",
-        "nums = [-1,0,1,2,-1,-4]\r\n",
-        "for i in range(len(nums)-2):\r\n",
-        "    for j in range(i+1,len(nums)-1):\r\n",
-        "        for k in range(j+1,len(nums)):\r\n",
-        "            if nums[i]+nums[j]+nums[k]==0:\r\n",
-        "                print(nums[i],nums[j],nums[k])"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "-1 0 1\n",
-            "-1 2 -1\n",
-            "0 1 -1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "mc-VIv1kae9G",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b201c32f-2682-4703-d6e9-a36b84bcba23"
-      },
-      "source": [
-        "# 15. 3Sum - Use set function to remove duplicates i.e to check if [1,0,-1] is same as [-1,0,1]\r\n",
-        "nums = [-1,0,1,2,-1,-4]\r\n",
-        "new_nums = []\r\n",
-        "for i in range(len(nums)-2):\r\n",
-        "    for j in range(i+1,len(nums)-1):\r\n",
-        "        for k in range(j+1,len(nums)):\r\n",
-        "            if nums[i]+nums[j]+nums[k]==0 and set([nums[i],nums[j],nums[k]]) not in new_nums:\r\n",
-        "                new_nums.append(set([nums[i],nums[j],nums[k]]))\r\n",
-        "print(len(new_nums))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "2\n"
           ],
           "name": "stdout"
         }
