--- a/Interview Questions/LeetCodePython.ipynb
+++ b/Interview Questions/LeetCodePython.ipynb
@@ -6,7 +6,7 @@
       "name": "LeetCodePython.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMBo9m2wYhBp1ZGdsyYJj1i",
+      "authorship_tag": "ABX9TyPqsU8yPsyxvQbc+PL3aYQ9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1362,7 +1362,259 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "a-36EPbjsRK9"
+        "id": "1r6wxqq2aT16",
+        "outputId": "c7a61f2b-fc76-4876-cd9d-906f154caa43",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 1122. Relative Sort Array\r\n",
+        "# Given two arrays arr1 and arr2, the elements of arr2 are distinct, and all elements in arr2 are also in arr1.\r\n",
+        "# Sort the elements of arr1 such that the relative ordering of items in arr1 are the same as in arr2.  Elements that don't appear in arr2 should be placed at the end of arr1 in ascending order.\r\n",
+        "arr1 = [2,3,1,3,2,4,6,7,9,2,19]\r\n",
+        "arr2 = [2,1,4,3,9,6]\r\n",
+        "# Output: [2,2,2,1,4,3,3,9,6,7,19]\r\n",
+        "arr1_sort = []\r\n",
+        "for i in arr2:\r\n",
+        "  if i in arr1:\r\n",
+        "    for j in range(arr1.count(i)):\r\n",
+        "      arr1_sort.append(i)\r\n",
+        "print(arr1_sort)\r\n",
+        "Distinct_arr1 = sorted(list(set(arr1).difference(set(arr2))))\r\n",
+        "arr1_sort.extend(Distinct_arr1)\r\n",
+        "print(Distinct_arr1)\r\n",
+        "print(arr1_sort)"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[2, 2, 2, 1, 4, 3, 3, 9, 6]\n",
+            "[7, 19]\n",
+            "[2, 2, 2, 1, 4, 3, 3, 9, 6, 7, 19]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Aa6bAj97b4TG",
+        "outputId": "dc7e76a5-f80b-4368-da35-3ccbad167311",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check for multiple ifelse conditions, if one of the condition is false return False, otherwise return True\r\n",
+        "# 1160. Find Words That Can Be Formed by Characters\r\n",
+        "# You are given an array of strings words and a string chars.\r\n",
+        "# A string is good if it can be formed by characters from chars (each character can only be used once).\r\n",
+        "# Return the sum of lengths of all good strings in words.\r\n",
+        "words = [\"cat\",\"bt\",\"hat\",\"tree\"]\r\n",
+        "chars = list(\"atach\")\r\n",
+        "# Output: 6\r\n",
+        "for i in words:\r\n",
+        "  for j in i:\r\n",
+        "    if j in chars:\r\n",
+        "      chars.remove(j)\r\n",
+        "    else:\r\n",
+        "      words.remove(i) # if any of the characters of the word are not in chars, remove that word from the list implies the list remaining will have the words that has all characters satisfying the condition\r\n",
+        "      break\r\n",
+        "print(words)"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['cat', 'hat']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NP7kfBOBgXBC"
+      },
+      "source": [
+        "# 509. Fibonacci Number\r\n",
+        "# Fibonacci sequence\r\n",
+        "Arr = [1,1]\r\n",
+        "for i in range(2,8):\r\n",
+        "  Arr.append(int(Arr[i-1]+Arr[i-2]))\r\n",
+        "print(Arr)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D-d6oM8NgbNS"
+      },
+      "source": [
+        "# Fibonacci sequence : Bottom-up approach\r\n",
+        "def fibo(n):\r\n",
+        "   if n<=1:\r\n",
+        "       return n\r\n",
+        "   else:\r\n",
+        "       return(fibo(n-1) + fibo(n-2))\r\n",
+        "\r\n",
+        "print(fibo(4))\r\n",
+        "\r\n",
+        "print(\"\\n\",\"Whole Sequence\")\r\n",
+        "for i in range(1,8):\r\n",
+        "  print(fibo(i))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AeG6GGNlgg-g",
+        "outputId": "b5538e62-65fe-4cc3-953c-8dfb7a67d5f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 1133. Largest Unique Number\r\n",
+        "# Given an array of integers A, return the largest integer that only occurs once.\r\n",
+        "# If no integer occurs once, return -1.\r\n",
+        "Input = [9,9,8,8] #[5,7,3,9,4,9,8,3,1]\r\n",
+        "Output: -1 #8\r\n",
+        "while len(Input)>0 and max(Input) in Input[Input.index(max(Input))+1:]:\r\n",
+        "  for i in range(Input.count(max(Input))):\r\n",
+        "    Input.remove(max(Input))\r\n",
+        "  if Input == []:\r\n",
+        "    print(-1)\r\n",
+        "    break\r\n",
+        "else:\r\n",
+        "  print(max(Input))"
+      ],
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cqB7m1nBol6W",
+        "outputId": "d497bd9e-d21b-47d0-f30a-9fcf01105aa9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 1200. Minimum Absolute Difference\r\n",
+        "# Given an array of distinct integers arr, find all pairs of elements with the minimum absolute difference of any two elements. \r\n",
+        "# Return a list of pairs in ascending order(with respect to pairs), each pair [a, b] follows\r\n",
+        "# a, b are from arr\r\n",
+        "# a < b\r\n",
+        "# b - a equals to the minimum absolute difference of any two elements in arr\r\n",
+        "arr = [4,2,1,3] #[6,10,1,13,3] \r\n",
+        "# Output: [[1,2],[2,3],[3,4]] #[[1,3]] \r\n",
+        "Output_arr = []\r\n",
+        "Min_Diff = abs(arr[1]-arr[0])\r\n",
+        "for i in range(len(arr)-1):\r\n",
+        "  for j in range(i+1,len(arr)):\r\n",
+        "    if abs(arr[i]-arr[j])<=Min_Diff:\r\n",
+        "      Min_Diff = abs(arr[i]-arr[j])\r\n",
+        "      Output_arr.append((arr[i],arr[j]))\r\n",
+        "print(Min_Diff)\r\n",
+        "print(Output_arr)\r\n",
+        "for i,j in Output_arr:\r\n",
+        "  if abs(j-i) != Min_Diff:\r\n",
+        "    Output_arr.remove((i,j))\r\n",
+        "print(Output_arr)"
+      ],
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "[(4, 2), (4, 3), (2, 1), (2, 3)]\n",
+            "[(4, 3), (2, 1), (2, 3)]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-DKTA6Z0t23E",
+        "outputId": "f1fde971-3bb9-4e17-a5ce-1bae9c60aa4a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 1385. Find the Distance Value Between Two Arrays\r\n",
+        "# Given two integer arrays arr1 and arr2, and the integer d, return the distance value between the two arrays.\r\n",
+        "# The distance value is defined as the number of elements arr1[i] such that there is not any element arr2[j] where |arr1[i]-arr2[j]| <= d.\r\n",
+        "arr1 = [4,5,8,6]\r\n",
+        "arr2 = [10,9,1,8]\r\n",
+        "d = 2\r\n",
+        "# Output: 2\r\n",
+        "for i in arr1:\r\n",
+        "  for j in arr2:\r\n",
+        "    if abs(i-j)>d:\r\n",
+        "      pass\r\n",
+        "    else:\r\n",
+        "      arr1.remove(i) # even if one abs(i-j) <=d, remove i from arr1 and stop looping through j for that i. Go to next i\r\n",
+        "      break\r\n",
+        "print(arr1)"
+      ],
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[4, 5, 6]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P6MqXhwwvQPl"
+      },
+      "source": [
+        "# 766. Toeplitz Matrix\r\n",
+        "# Given an m x n matrix, return true if the matrix is Toeplitz. Otherwise, return false.\r\n",
+        "# A matrix is Toeplitz if every diagonal from top-left to bottom-right has the same elements.\r\n",
+        "\r\n",
+        "\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a-36EPbjsRK9",
+        "outputId": "9187dca4-ebcf-4596-de19-4997e5b38d46",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# 1. Two Sum\r\n",
@@ -1377,8 +1629,16 @@
         "          if target==nums[i]+nums[j]:\r\n",
         "            print(i,j)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1412,7 +1672,7 @@
         "  Sorted_Arr.extend(Arr1[i:])\r\n",
         "print(Sorted_Arr)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1445,7 +1705,7 @@
         "else:\r\n",
         "  print((Sorted_Arr[(len(Sorted_Arr)/2)-1]+Sorted_Arr[len(Sorted_Arr)/2])/2)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1490,10 +1750,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ABIVa0GnQD7t",
-        "outputId": "857e90a5-3ed9-47ae-df95-661d98183a7c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "857e90a5-3ed9-47ae-df95-661d98183a7c"
       },
       "source": [
         "# 15. 3Sum\r\n",
@@ -1519,7 +1779,7 @@
         "print(new_nums)\r\n",
         "print(len(new_nums))"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1562,6 +1822,39 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "12EGRjkElLWr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "31fbaf5f-c22d-448c-c9ac-ff18fb3b8b6a"
+      },
+      "source": [
+        "# pending\r\n",
+        "# 1636. Sort Array by Increasing Frequency\r\n",
+        "# Given an array of integers nums, sort the array in increasing order based on the frequency of the values. If multiple values have the same frequency, sort them in decreasing order.\r\n",
+        "nums = [2,3,1,3,2]\r\n",
+        "# Output: [1,3,3,2,2]\r\n",
+        "sorted(dict(Counter(nums)).items())"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(1, 1), (2, 2), (3, 2)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "pQyMIhF8F8jl",
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1585,7 +1878,7 @@
         "  for j in i.items():\r\n",
         "    print(j)\r\n"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
